--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="blue">#2E42B5</color>
     <color name="red">#DD1515</color>
     <color name="green">#128E1D</color>
-    <color name="amber">#FFD128</color>
+    <color name="amber">#FFA928</color>
 
     <color name="blackSemi">#A8000000</color>
     <color name="orangeSemi">#B1FF6600</color>
