--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:orientation="horizontal"
-        app:layout_constraintHeight_percent=".13"
+        app:layout_constraintHeight_percent=".15"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
@@ -55,7 +55,7 @@
             android:text="TO/DA/YY"
             android:textColor="@android:color/white"
             android:textSize="50sp"
-            app:layout_constraintHeight_percent=".8"
+            app:layout_constraintHeight_percent=".7"
             app:layout_constraintLeft_toRightOf="@id/left_button"
             app:layout_constraintRight_toLeftOf="@id/right_button" />
 
@@ -80,7 +80,8 @@
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="10dp"/>
 
 
     </eu.marcellofabbri.dailyroadmap.MainHeader>
@@ -267,7 +268,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent=".83"
+        app:layout_constraintHeight_percent=".85"
         app:layout_constraintLeft_toLeftOf="parent" />
 
 
