--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -169,7 +170,7 @@
                     android:elevation="17dp"
                     android:fontFamily="@font/oswald_regular"
                     android:text="05"
-                    android:textColor="#0116FF"
+                    android:textColor="@color/colorAccent"
                     android:textSize="27sp" />
 
                 <TextView
@@ -179,7 +180,7 @@
                     android:layout_marginTop="14dp"
                     android:elevation="16dp"
                     android:text="TODAY"
-                    android:textColor="#0033FF"
+                    android:textColor="@color/colorAccent"
                     android:textSize="9sp"
                     android:background="@android:color/transparent"/>
 
