--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#6200EE</color>
     <color name="daytimeBackground">#85ABFD</color>
     <color name="daytimeBackgroundDarker">#7C9EE8</color>
     <color name="calendarButton">#673AB7</color>
