--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Your task here"
+        android:maxLength="41"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         android:inputType="text" />
