--- a/app/src/main/res/drawable/ic_big_trash.xml
+++ b/app/src/main/res/drawable/ic_big_trash.xml
@@ -1,4 +1,4 @@
-<vector android:height="50dp" android:tint="#0022FF"
+<vector android:height="50dp" android:tint="@color/logoBackgroundHeader"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="50dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
