--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,13 +35,56 @@
         app:layout_constraintHeight_percent=".15"
         app:layout_constraintTop_toTopOf="parent">
 
+        <FrameLayout
+            android:id="@+id/frame_day_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/left_button"
+            app:layout_constraintLeft_toLeftOf="parent">
+
+            <TextView
+                android:id="@+id/day_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="11dp"
+                android:elevation="17dp"
+                android:fontFamily="@font/oswald_regular"
+                android:text="05"
+                android:textColor="@android:color/white"
+                android:textSize="27sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="13dp"
+                android:elevation="16dp"
+                android:text="TODAY"
+                android:fontFamily="@font/oswald_regular"
+                android:textColor="@android:color/white"
+                android:textSize="9sp"
+                android:background="@android:color/transparent"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/today_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/logoBackgroundHeader"
+                android:outlineSpotShadowColor="@android:color/transparent"/>
+
+        </FrameLayout>
+
         <Button
             android:id="@+id/left_button"
             android:layout_width="50dp"
             android:layout_height="75dp"
             android:background="@android:color/transparent"
-            android:drawableLeft="@drawable/ic_chevron_left"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:drawableRight="@drawable/ic_chevron_left"
+            app:layout_constraintLeft_toRightOf="@id/frame_day_button"
             app:layout_constraintRight_toLeftOf="@id/header_date" />
 
         <EditText
@@ -55,7 +98,7 @@
             android:inputType="none"
             android:text="TO/DA/YY"
             android:textColor="@android:color/white"
-            android:textSize="50sp"
+            android:textSize="40sp"
             app:layout_constraintHeight_percent=".7"
             app:layout_constraintLeft_toRightOf="@id/left_button"
             app:layout_constraintRight_toLeftOf="@id/right_button" />
@@ -65,9 +108,9 @@
             android:layout_width="50dp"
             android:layout_height="75dp"
             android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_chevron_right"
+            android:drawableLeft="@drawable/ic_chevron_right"
             app:layout_constraintLeft_toRightOf="@id/header_date"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toLeftOf="@id/frame_add_button" />
 
         <EditText
             android:id="@+id/day_of_the_week"
@@ -84,13 +127,46 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginBottom="10dp"/>
 
+        <FrameLayout
+            android:id="@+id/frame_add_button"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/right_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:elevation="20dp">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/button_add_event"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/logoBackgroundHeader"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:outlineSpotShadowColor="@android:color/transparent"/>
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/image_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_add"
+                android:background="@android:color/transparent"
+                android:elevation="17dp"/>
+
+        </FrameLayout>
+
 
     </eu.marcellofabbri.dailyroadmap.MainHeader>
 
     <LinearLayout
         android:id="@+id/central_container"
-        android:layout_width="210dp"
-        android:layout_height="350dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -98,109 +174,29 @@
         app:layout_constraintTop_toBottomOf="@+id/header">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="20dp"
             android:id="@+id/recycler_view"
             android:layout_width="210dp"
-            android:layout_height="270dp"
+            android:layout_height="300dp"
             android:background="@android:color/transparent"
             tools:listitem="@layout/event_item"
             android:requiresFadingEdge="vertical"
             android:outlineAmbientShadowColor="@color/daytimeBackground"/>
 
-        <eu.marcellofabbri.dailyroadmap.MyButtonsCardView
+        <androidx.cardview.widget.CardView
+            android:layout_gravity="bottom"
             android:id="@+id/my_buttons_cardview"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             app:cardElevation="0dp"
             app:cardBackgroundColor="@android:color/transparent"
             app:cardCornerRadius="35dp">
 
             <FrameLayout
-                android:id="@+id/frame_calendar_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/calendar_button"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="0dp"
-                    android:outlineSpotShadowColor="@android:color/transparent"
-                    android:backgroundTint="@color/trackDefaultColor" />
-
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/image_calendar"
-                    android:clickable="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="5dp"
-                    android:background="@android:color/transparent"
-                    android:elevation="20dp"
-                    android:src="@drawable/ic_calendar_large" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|bottom"
-                    android:layout_marginBottom="7dp"
-                    android:elevation="16dp"
-                    android:text="CALENDAR"
-                    android:textColor="#0033FF"
-                    android:textSize="7sp" />
-
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/frame_day_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="52.5dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
-
-                <TextView
-                    android:id="@+id/day_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="11dp"
-                    android:elevation="17dp"
-                    android:fontFamily="@font/oswald_regular"
-                    android:text="05"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="27sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="14dp"
-                    android:elevation="16dp"
-                    android:text="TODAY"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="9sp"
-                    android:background="@android:color/transparent"/>
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/today_button"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:backgroundTint="@color/trackDefaultColor"
-                    android:outlineSpotShadowColor="@android:color/transparent"/>
-
-            </FrameLayout>
-
-            <FrameLayout
                 android:id="@+id/frame_trash_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginRight="52.5dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
+                android:layout_gravity="center">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -209,8 +205,9 @@
                     android:layout_marginLeft="0dp"
                     android:elevation="18dp"
                     android:text="ALL"
-                    android:textColor="@android:color/white"
-                    android:textSize="8sp" />
+                    android:fontFamily="@font/oswald_medium"
+                    android:textColor="@color/logoBackgroundHeader"
+                    android:textSize="9sp" />
 
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/image_trash"
@@ -224,42 +221,15 @@
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/button_delete_today_events"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:backgroundTint="@color/trackDefaultColor"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:backgroundTint="@color/logoBackgroundHeader"
                     android:outlineSpotShadowColor="@android:color/transparent"/>
 
             </FrameLayout>
 
-            <FrameLayout
-                android:id="@+id/frame_add_button"
-                android:clickable="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:elevation="20dp">
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/button_add_event"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:backgroundTint="@color/trackDefaultColor"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:outlineSpotShadowColor="@android:color/transparent"/>
-
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/image_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_add"
-                    android:background="@android:color/transparent"
-                    android:elevation="17dp"/>
-
-            </FrameLayout>
-
-        </eu.marcellofabbri.dailyroadmap.MyButtonsCardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
@@ -269,7 +239,8 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent=".85"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHeight_percent=".80"
         app:layout_constraintLeft_toLeftOf="parent" />
 
 
