--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,16 +2,21 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#6200EE</color>
-    <color name="daytimeBackground">#85ABFD</color>
+    <color name="colorAccent">#406dce</color>
+    <color name="cardViewButtonsText">#243EC5</color>
+    <color name="daytimeBackground">#739EFB</color>
     <color name="daytimeBackgroundDarker">#7C9EE8</color>
+    <color name="card">#FFFFFF</color>
     <color name="calendarButton">#673AB7</color>
     <color name="todayButton">#673AB7</color>
     <color name="deleteAllButton">#3A9EB7</color>
     <color name="addButton">#3A9EB7</color>
-    <color name="trackDefaultColor">#E6E7EF</color>
-    <color name="semiTrasparent">#3A0097FF</color>
+    <color name="trackDefaultColor">#EAEAEC</color>
+    <color name="semiTrasparent">#E7E7EA</color>
+    <color name="bottomCard">#4FD3C7C7</color>
     <color name="bigDate">#5696FD</color>
+    <color name="redToast">#FF6363</color>
+    <color name="logoBackgroundHeader">#406dce</color>
 
     <color name="black">#000000</color>
     <color name="orange">#FF6600</color>
