--- a/app/src/main/res/layout-v28/event_item.xml
+++ b/app/src/main/res/layout-v28/event_item.xml
@@ -1,113 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:outlineAmbientShadowColor="@color/cardview_shadow_end_color"
-    app:cardBackgroundColor="@color/card"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="@dimen/cardview_default_elevation">
+    >
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/inside_card"
-        android:layout_width="match_parent"
+        android:layout_width="205dp"
         android:layout_height="wrap_content"
-        android:outlineAmbientShadowColor="@android:color/black">
+        android:layout_marginTop="5dp"
+        android:paddingVertical="2dp"
+        android:outlineAmbientShadowColor="@color/cardview_shadow_end_color"
+        app:cardBackgroundColor="@color/card"
+        app:cardCornerRadius="3dp"
+        app:cardElevation="@dimen/cardview_default_elevation">
 
-
-        <View
+        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/inside_card"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@color/bottomCard"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-
-        <TextView
-            android:id="@+id/text_view_description"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="3dp"
-            android:text="Title"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@id/inside_card"
-            app:layout_constraintTop_toTopOf="@id/inside_card" />
+            android:background="@color/card"
+            android:outlineAmbientShadowColor="@android:color/black">
 
-        <TextView
-            android:id="@+id/text_view_start_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_toEndOf="@id/text_view_description"
-            android:text="Start"
-            android:textSize="15sp"
-            app:layout_constraintLeft_toLeftOf="@id/inside_card"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_description" />
 
-        <TextView
-            android:id="@+id/text_view_finish_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@id/text_view_start_time"
-            android:text="End"
-            android:textSize="15sp"
-            app:layout_constraintLeft_toRightOf="@id/text_view_start_time"
-            app:layout_constraintTop_toBottomOf="@id/text_view_description" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:background="@color/bottomCard"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:layout_width="120dp"
-            android:layout_height="30dp"
-            android:layout_marginVertical="6dp"
-            android:layout_marginRight="5dp"
-            app:layout_constraintBottom_toBottomOf="@id/inside_card"
-            app:layout_constraintRight_toRightOf="@id/inside_card"
-            app:layout_constraintTop_toTopOf="@id/inside_card">
 
-            <FrameLayout
-                android:id="@+id/frame_edit_button"
-                android:layout_width="30dp"
+            <TextView
+                android:id="@+id/text_view_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="3dp"
+                android:text="Title"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@id/inside_card"
+                app:layout_constraintTop_toTopOf="@id/inside_card" />
+
+            <TextView
+                android:id="@+id/text_view_start_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_toEndOf="@id/text_view_description"
+                android:text="Start"
+                android:textSize="15sp"
+                app:layout_constraintLeft_toLeftOf="@id/inside_card"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_description" />
+
+            <TextView
+                android:id="@+id/text_view_finish_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_toEndOf="@id/text_view_start_time"
+                android:text="End"
+                android:textSize="15sp"
+                app:layout_constraintLeft_toRightOf="@id/text_view_start_time"
+                app:layout_constraintTop_toBottomOf="@id/text_view_description" />
+
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="120dp"
                 android:layout_height="30dp"
-                android:layout_gravity="right">
+                android:layout_marginVertical="6dp"
+                android:layout_marginRight="5dp"
+                app:layout_constraintBottom_toBottomOf="@id/inside_card"
+                app:layout_constraintRight_toRightOf="@id/inside_card"
+                app:layout_constraintTop_toTopOf="@id/inside_card">
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/edit_button"
+                <FrameLayout
+                    android:id="@+id/frame_edit_button"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:elevation="0dp"
-                    android:outlineAmbientShadowColor="@android:color/white"
-                    android:outlineSpotShadowColor="@android:color/white"
-                    app:backgroundTint="@android:color/white"
-                    app:fabCustomSize="30dp" />
+                    android:layout_gravity="right">
 
-            </FrameLayout>
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/edit_button"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:elevation="0dp"
+                        android:outlineAmbientShadowColor="@android:color/white"
+                        android:outlineSpotShadowColor="@android:color/white"
+                        app:backgroundTint="@android:color/white"
+                        app:fabCustomSize="30dp" />
 
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/update_button"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_gravity="center|left"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/ic_edit"
-                app:fabCustomSize="27dp" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/delete_button"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_small_trash"
-                app:fabCustomSize="27dp" />
-
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                </FrameLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/update_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center|left"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/ic_edit"
+                    app:fabCustomSize="27dp" />
 
-</androidx.cardview.widget.CardView>
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/delete_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_small_trash"
+                    app:fabCustomSize="27dp" />
+
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
