--- a/app/src/main/res/layout-v28/event_item.xml
+++ b/app/src/main/res/layout-v28/event_item.xml
@@ -3,24 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
     >
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="205dp"
+        android:layout_height="48dp"
+        android:elevation="0dp"
+        app:cardCornerRadius="3dp"
+        app:cardBackgroundColor="@color/black"
+        android:outlineAmbientShadowColor="@color/black"
+        app:cardElevation="20dp"/>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="205dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:paddingVertical="2dp"
+        android:layout_width="204dp"
+        android:layout_height="47dp"
+        android:layout_margin=".2dp"
+        android:layout_marginEnd=".5dp"
+        android:layout_marginBottom=".5dp"
         android:outlineAmbientShadowColor="@color/cardview_shadow_end_color"
         app:cardBackgroundColor="@color/card"
         app:cardCornerRadius="3dp"
-        app:cardElevation="@dimen/cardview_default_elevation">
+        app:cardElevation="21dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/inside_card"
-            android:layout_width="match_parent"
+            android:layout_width="205dp"
             android:layout_height="wrap_content"
             android:background="@color/card"
             android:outlineAmbientShadowColor="@android:color/black">
