change pin drawable and add 'delete all' notifications for the day

--- a/app/src/main/res/layout-v28/event_item.xml
+++ b/app/src/main/res/layout-v28/event_item.xml
@@ -101,7 +101,7 @@
                         android:elevation="0dp"
                         android:outlineAmbientShadowColor="@android:color/white"
                         android:outlineSpotShadowColor="@android:color/white"
-                        app:backgroundTint="@android:color/white"
+                        app:backgroundTint="@color/card"
                         app:fabCustomSize="30dp" />
 
                 </FrameLayout>
