--- a/app/src/main/res/layout/app_widget_one.xml
+++ b/app/src/main/res/layout/app_widget_one.xml
@@ -3,17 +3,18 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
-    android:padding="@dimen/widget_margin">
+    android:padding="@dimen/widget_margin"
+    android:id="@+id/app_widget_one">
 
     <LinearLayout
-        android:id="@+id/central_container"
+        android:id="@+id/central_container_widget"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+        <ListView
+            android:id="@+id/listview_widget"
             android:layout_width="210dp"
             android:layout_height="300dp"
             android:layout_marginTop="20dp"
