--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -121,7 +121,7 @@
             android:id="@+id/assign_notice_text_view"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="Set notification's notice in minutes"
+            android:text="Notification's notice (mins):"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="19sp"
@@ -137,7 +137,7 @@
             app:layout_constraintLeft_toRightOf="@id/assign_notice_text_view"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="19dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
