--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/oswald_regular"
         android:text="NO EVENTS \nTO DISPLAY"
-        android:textSize="40dp"
+        android:textSize="30dp"
+        android:gravity="center"
         android:textAlignment="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -161,6 +162,20 @@
     </eu.marcellofabbri.dailyroadmap.view.activityHelpers.MainHeader>
 
     <LinearLayout
+        android:id="@+id/central_container_larger"
+        android:layout_width="215dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical"
+        android:layout_marginStart="0dp"
+        app:layout_constraintLeft_toRightOf="@id/scrollpaint"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header">
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/central_container"
         android:layout_width="206dp"
         android:layout_height="wrap_content"
@@ -170,7 +185,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header">
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        android:elevation="1dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginTop="20dp"
@@ -227,6 +243,12 @@
 
             </FrameLayout>
 
+            <FrameLayout
+                android:id="@+id/frame_trash_button_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"/>
+
 
         </androidx.cardview.widget.CardView>
 
@@ -235,10 +257,12 @@
     <ScrollView
         android:id="@+id/scrollpaint"
         android:layout_width="100dp"
-        android:layout_height="500dp"
+        android:layout_height="480dp"
+        app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:requiresFadingEdge="vertical">
 
         <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
             android:id="@+id/eventPainterContainerVertical"
